--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="HTML, лабораторна робота, веб-сторінка">
-    <meta name="description" content="Перша лабораторна робота з HTML-5. Інформація про автора, хобі та улюблені книги.">
+    <meta name="description" content="Лабораторні робота з HTML-5">
     <title>Хоменко К.О., група ІК-32</title>
+ <h2>Лабораторні роботи</h2>
+    <nav>
+        <ul>
+            <li><a href="index.html">Лабораторна робота 1</a></li>
+            <li><a href="lab2.html">Лабораторна робота 2</a></li>
+            <li><a href="lab3.html">Лабораторна робота 3</a></li>
+
+        </ul>
+    </nav>
 </head>
 <body>
 
@@ -42,5 +51,7 @@
     <p>Детальніше про місто можна дізнатися на офіційному сайті 
         <a href="https://omr.gov.ua/" target="_blank">odesa.travel</a>
     </p>
+
+
 </body>
 </html>
